infra/k8s/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  labels:
    app: backstage
    kubernal.io/environment: dev
    kubernal.io/managed-by: kubernal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
        kubernal.io/environment: dev
        kubernal.io/managed-by: kubernal
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backstage
          image: ghcr.io/gowaru/kubernal-backstage:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 7007
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/app-config.yaml
              subPath: app-config.yaml
            - name: config
              mountPath: /app/catalog-info.yaml
              subPath: catalog-info.yaml
          livenessProbe:
            tcpSocket:
              port: 7007
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 7007
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: '200m'
              memory: '256Mi'
            limits:
              cpu: '1'
              memory: '512Mi'
      volumes:
        - name: config
          configMap:
            name: backstage-config
