infra/k8s/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  labels:
    app: backstage
    kubernal.io/managed-by: kubernal
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 7007
      targetPort: 7007
      protocol: TCP
  type: ClusterIP
